--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
       </div>
     </section>
   </div><!-- container -->
-
+  
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
+    <p>Window resized <span id="demo">0</span> times.</p>
   </footer>
 
 </body>
