--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
     <p>Window resized <span id="demo">0</span> times.</p>
+    <p>Search something here</p>
+    <input type="search" id="myInput">
+    <p id="demo"></p>
   </footer>
 
 </body>
